<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FTC Reader</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_news_brief_list">Headlines</string>
    <string name="title_activity_news_panel">News Panel</string>

    <!-- Entry -->
    <string name="btn_signup">Sign Up</string>
    <string name="btn_signin">Sign In</string>

    <!-- Sign Up & Sign In -->
    <string name="email_hint">Email</string>
    <string name="pwd_hint">Password</string>
    
    <!-- News -->
    <string name="action_my_key">My Keys</string>
    <string name="action_bookmark">My Bookmarks</string>
    <string name="action_shared_key">Shared Keys</string>
    <string name="action_brightness">Brightness</string>
</resources>
