<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutWithPaddings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"        
    tools:context=".SignIn" >
    	
	<EditText
	    android:id="@+id/input_signin_email"
	    style="@style/DefaultTextStyle"
	    android:hint="@string/email_hint"
	    android:inputType="textEmailAddress" />	    	

	<EditText	    
	    android:id="@+id/input_signin_pwd"
	    style="@style/DefaultTextStyle"
	    android:hint="@string/pwd_hint"	    
	    android:inputType="textPassword" />	
	
	<Button
        style="@style/ButtonLarge"        
        android:text="@string/btn_signin" />	
</LinearLayout>