<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"    
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding"
    tools:context=".Entry" >

	<TextView
        style="@style/HeaderOne"           
        android:text="@string/app_name" />	    	

	<Button        
        style="@style/ButtonLarge"        
        android:text="@string/btn_signup"
        android:onClick="startSignUpActivity" />	
	
	<Button        
        style="@style/ButtonLarge"        
        android:text="@string/btn_signin" 
        android:onClick="startSignInActivity" />	
</LinearLayout>
