<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"    
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding"
    tools:context=".SignUp" >
    	
	<EditText
	    android:id="@+id/input_signup_email"
	    style="@style/InputStyle"
	    android:hint="@string/email_hint"
	    android:inputType="textEmailAddress" />	    	

	<EditText
	    android:id="@+id/input_signup_pwd"	    
	    style="@style/InputStyle"
	    android:hint="@string/pwd_hint"	    
	    android:inputType="textPassword" />	
	
	<Button        
        style="@style/ButtonLarge"        
        android:text="@string/btn_signup" />	
</LinearLayout>